testdata/unresolvedReference/Test.elm
module Module exposing (Type(<error descr="Unresolved type constructor">BadCons</error>))

import <error descr="Unresolved module">BadModule</error>

type alias Alias = <error descr="Unresolved type">BadType</error>

type Type = Cons